Fix Gallery Imageare cropped

--- a/src/component/PDPGalleryOverlay/PDPGalleryOverlay.style.scss
+++ b/src/component/PDPGalleryOverlay/PDPGalleryOverlay.style.scss
@@ -15,11 +15,13 @@
     background: var(--overlay-background-color);
     z-index: 600;
     grid-template-columns: 1fr 6fr;
+    height:100vh;
     &-Crumbs {
         z-index: 100;
         // height: 150px;
         order: 2;
         display: flex;
+        bottom: 0;
         background: var(--white-color);
         .SliderHorizontal {
             height: auto !important;
@@ -149,6 +151,7 @@
     .PDPGalleryOverlay {
         .Slider {
             margin: auto 10px;
+            bottom: 0;
         }
         .ZoomGuide {
             position: absolute;
